--- a/Javascript/Part 3/index.html
+++ b/Javascript/Part 3/index.html
@@ -8,7 +8,5 @@
 <body>
     
 </body>
-<script src="Practise.js"></script>
-<!--<script src="Operator.js"></script>
-<script src="ConditionalStatements.js"></script>-->
+<script src="loopsstrings.js"></script>
 </html>
