--- a/Javascript/Part 3/index.html
+++ b/Javascript/Part 3/index.html
@@ -8,5 +8,6 @@
 <body>
     
 </body>
-<script src="loopsstrings.js"></script>
+<script src="strings.js"></script>
+<!--<script src="loops.js"></script>-->
 </html>
