--- a/Javascript/Part 6(JS in Browser)/index.html
+++ b/Javascript/Part 6(JS in Browser)/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
     <h1 id="h1">example</h1>
-    
-    
+    <h2 class="h2">Javascript</h2>
+    <h2 class="h2">Java</h2>
+    <h2 class="h2">Python</h2>
+    <h2 class="h2">C++</h2>
+    <p>This is an example file</p>
+    <p>This is a very good bad example</p>
+    <div id="div">
+        <div>Hello!</div>
+        <p style="visibility: hidden;">This is div</p>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
