--- a/Javascript/Part 6(JS in Browser)/index.html
+++ b/Javascript/Part 6(JS in Browser)/index.html
@@ -12,9 +12,9 @@
     <h2 class="h2">Java</h2>
     <h2 class="h2">Python</h2>
     <h2 class="h2">C++</h2>
-    <p>This is an example file</p>
-    <p>This is a very good bad example</p>
-    <div id="div">
+    <p class="para">This is an example file</p>
+    <p class="para">This is a very good bad example</p>
+    <div id="div" name="JSdiv">
         <div>Hello!</div>
         <p style="visibility: hidden;">This is div</p>
     </div>
