--- a/Javascript/Part 8/index.html
+++ b/Javascript/Part 8/index.html
@@ -27,6 +27,14 @@
 <div id="box">
   This is Box2 !
 </div>
+<div id="box2">
+    This is box3!
+</div>
+<button id="btn3">removeEventListener!</button>
+
+<button id="toggle">Change Mode Light/Darkness</button>
+
+
 <script src="script.js"></script>
 </body>
 
